Small fix and new articles.

--- a/index.html
+++ b/index.html
@@ -71,6 +71,28 @@
     <div class="articlesBox" id="articles">
         <h1 class="articlesBox__mainTitle">Pozytywne wibracje</h1>
 
+        <a class="articlesBox__article showHideElement articlesBox__article--right" href="./articles/article8.html">
+            <div class="articlesBox__articleContent">
+                <div class="articlesBox__articleTop">Zdrowie</div>
+                <div class="articlesBox__articleTitle">Odporność na przedwiośniu <br> cz. 2</div>
+                <div class="articlesBox__articleText">
+                    Ta część to kolejna dawka praktycznych informacji na temat wzmacniania odporności. Probiotyki, witaminy, czosnek, aronia i inni goście zapraszają!
+                </div>
+            </div>
+            <div class="articlesBox__articleImage" data-image-src='{"type":"background","desktopSrc":"photo8.jpg","size":"small"}'></div>
+        </a>
+
+        <a class="articlesBox__article showHideElement" href="./articles/article7.html">
+            <div class="articlesBox__articleContent">
+                <div class="articlesBox__articleTop">Przepisy</div>
+                <div class="articlesBox__articleTitle">Omlet <br> kokosowo-owocowy</div>
+                <div class="articlesBox__articleText">
+                    Oto moja propozycja zdrowego śniadania...
+                </div>
+            </div>
+            <div class="articlesBox__articleImage" data-image-src='{"type":"background","desktopSrc":"photo7.jpg","size":"small"}'></div>
+        </a>
+
         <a class="articlesBox__article showHideElement articlesBox__article--right" href="./articles/article6.html">
             <div class="articlesBox__articleContent">
                 <div class="articlesBox__articleTop">Zdrowie</div>
