Add new article.

--- a/index.html
+++ b/index.html
@@ -71,6 +71,17 @@
     <div class="articlesBox" id="articles">
         <h1 class="articlesBox__mainTitle">Pozytywne wibracje</h1>
 
+        <a class="articlesBox__article showHideElement" href="./articles/article9.html">
+            <div class="articlesBox__articleContent">
+                <div class="articlesBox__articleTop">Hashimoto</div>
+                <div class="articlesBox__articleTitle">Zdrowie czy choroba, kobieta czy mężczyzna – BADAJ TARCZYCĘ!</div>
+                <div class="articlesBox__articleText">
+                    Być może niektórzy z Was, już borykają się z upośledzeniem tego małego gruczołu, jednak zachęcam także tych potencjalnie zdrowych do pewnego rozeznania w tej kwestii, ponieważ niestety liczba osób  z chorobami tarczycy ciągle wzrasta ...
+                </div>
+            </div>
+            <div class="articlesBox__articleImage" data-image-src='{"type":"background","desktopSrc":"photo9.jpg","size":"small"}'></div>
+        </a>
+
         <a class="articlesBox__article showHideElement articlesBox__article--right" href="./articles/article8.html">
             <div class="articlesBox__articleContent">
                 <div class="articlesBox__articleTop">Zdrowie</div>
