Add new content.

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <div class="navigation__list">
             <a class="navigation__link" href="#aboutMe">O Mnie</a>
             <a class="navigation__link" href="./articles/articles.html">Artykuły</a>
+            <a class="navigation__link" href="./recipes/recipes.html">Przepisy</a>
             <a class="navigation__link" href="#contact">Kontakt</a>
         </div>
         <div class="navigation__hamburger">
@@ -71,6 +72,51 @@
     <div class="articlesBox" id="articles">
         <h1 class="articlesBox__mainTitle">Pozytywne wibracje</h1>
 
+        <a class="articlesBox__article showHideElement" href="./articles/article11.html">
+            <div class="articlesBox__articleContent">
+                <div class="articlesBox__articleTop">Emocje</div>
+                <div class="articlesBox__articleTitle">Kwiecień miesiącem samoakceptacji</div>
+                <div class="articlesBox__articleText">
+                    Sama dla siebie stworzyłam miesiąc tematyczny – kwiecień miesiącem samoakceptacji… Podsumowanie tego miesiąca z towarzyszącym mi w głowie tematem głównym postanowiłam opisać w artykule, który masz przed oczyma...
+                </div>
+            </div>
+            <div class="articlesBox__articleImage" data-image-src='{"type":"background","desktopSrc":"photo11.jpg","size":"small"}'></div>
+        </a>
+
+
+        <a class="articlesBox__article showHideElement articlesBox__article--right" href="./recipes/recipe3.html">
+            <div class="articlesBox__articleContent">
+                <div class="articlesBox__articleTop">Przepisy</div>
+                <div class="articlesBox__articleTitle">Fit batony owsiano-daktyLOVE</div>
+                <div class="articlesBox__articleText">
+                    Czy znasz to uczucie gdy jesteś tuż na finiszu zakupów, dumny jak paw, że tym razem udało Ci się wygrać z pokusami i nie ugiąłeś się przed słodkościami...
+                </div>
+            </div>
+            <div class="articlesBox__articleImage" data-image-src='{"type":"background","desktopSrc":"recipe3.jpg","size":"small"}'></div>
+        </a>
+
+        <a class="articlesBox__article showHideElement" href="./recipes/recipe2.html">
+            <div class="articlesBox__articleContent">
+                <div class="articlesBox__articleTop">Przepisy</div>
+                <div class="articlesBox__articleTitle">GofroLOVE czyli zdrowe gofry dla wymagających</div>
+                <div class="articlesBox__articleText">
+                    Smakołyk ten polecam zarówno jako ofertę na zdrowe śniadanie a także ciekawą kolację dla wszystkich miłośników słodkich dań...
+                </div>
+            </div>
+            <div class="articlesBox__articleImage" data-image-src='{"type":"background","desktopSrc":"recipe2.jpg","size":"small"}'></div>
+        </a>
+
+        <a class="articlesBox__article showHideElement articlesBox__article--right" href="./articles/article10.html">
+            <div class="articlesBox__articleContent">
+                <div class="articlesBox__articleTop">Hashimoto</div>
+                <div class="articlesBox__articleTitle">TERAPEUTYCZNA MOC JEDZENIA W CHOROBACH TARCZYCY</div>
+                <div class="articlesBox__articleText">
+                    To co znajdziesz w dzisiejszym artykule, to zalecenia dietetyczne ze wskazaniem dla osób, które tak jak ja borykają się z niedoczynnością tarczycy i Hashimoto ...
+                </div>
+            </div>
+            <div class="articlesBox__articleImage" data-image-src='{"type":"background","desktopSrc":"photo10.jpg","size":"small"}'></div>
+        </a>
+
         <a class="articlesBox__article showHideElement" href="./articles/article9.html">
             <div class="articlesBox__articleContent">
                 <div class="articlesBox__articleTop">Hashimoto</div>
@@ -93,7 +139,7 @@
             <div class="articlesBox__articleImage" data-image-src='{"type":"background","desktopSrc":"photo8.jpg","size":"small"}'></div>
         </a>
 
-        <a class="articlesBox__article showHideElement" href="./articles/article7.html">
+        <a class="articlesBox__article showHideElement" href="./recipes/recipe1.html">
             <div class="articlesBox__articleContent">
                 <div class="articlesBox__articleTop">Przepisy</div>
                 <div class="articlesBox__articleTitle">Omlet <br> kokosowo-owocowy</div>
