--- a/recipes/recipe1.html
+++ b/recipes/recipe1.html
@@ -27,16 +27,16 @@
         gtag('config', 'UA-97017090-7');
     </script>
 
-    <meta property="og:url"                content="https://onlygoodvibes.pl/articles/article7.html" />
+    <meta property="og:url"                content="https://onlygoodvibes.pl/recipes/recipe1.html" />
     <meta property="og:type"               content="article" />
-    <meta property="og:title"              content="Omlet kokosowo-owocowy" />
-    <meta property="og:description"        content="Oto moja propozycja zdrowego śniadania..." />
-    <meta property="og:image"              content="https://onlygoodvibes.pl/image/desktop/photo7.jpg" />
+    <meta property="og:title"              content="Omlet owocowo-kokosowy" />
+    <meta property="og:description"        content="Mam dla Was pyszną i zdrową propozycję na śniadanie dla miłośników słodkich poranków..." />
+    <meta property="og:image"              content="http://onlygoodvibes.pl/image/desktop/photo7.jpg" />
 
 </head>
-<body>
+<body class="recipe__web">
     <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/pl_PL/sdk.js#xfbml=1&version=v10.0" nonce="6Py48fxF"></script>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/pl_PL/sdk.js#xfbml=1&version=v10.0" nonce="ZufUFwYD"></script>
 
     <div class="navigation">
         <a href="../index.html" class="logoOGV logoOGV--nav">
@@ -50,7 +50,7 @@
         <div class="navigation__list">
             <a class="navigation__link" href="../index.html#aboutMe">O Mnie</a>
             <a class="navigation__link" href="../articles/articles.html">Artykuły</a>
-            <a class="navigation__link" href="../recipes/recipes.html">Przepisy</a>
+            <a class="navigation__link" href="./recipes.html">Przepisy</a>
             <a class="navigation__link" href="#contact">Kontakt</a>
         </div>
         <div class="navigation__hamburger">
@@ -59,93 +59,81 @@
             </div>
         </div>
     </div>
-    <div class="article__hero">
-        <div class="article__heroImg" data-image-src='{"type":"background","desktopSrc":"photo7.jpg"}'></div>
-    </div>
-    <div class="article">
-        <div class="article__mainTitle showHideElement">Omlet <br> kokosowo-owocowy</div>
-        <div class="article__content showHideElement">
-            <div class="article__title">
-                Składniki:
+    <div class="recipe">
+        <div class="recipe__top">
+            <div class="recipe__imageBox">
+                <img src="../image/desktop/photo7.jpg" alt="Zdjecie naleśnika" class="recipe__image">
+                <div class="recipe__info">
+                    <div class="recipe__kcal">354 kcal</div>
+                    <div class="recipe__macro">
+                        <div class="recipe__macroIngredient recipe__macroIngredient--protein">B 36</div>
+                        <div class="recipe__macroIngredient recipe__macroIngredient---carbohydrates">W 116</div>
+                        <div class="recipe__macroIngredient recipe__macroIngredient---fats">T 26</div>
+                    </div>
+                </div>
             </div>
-            <div class="article__p">
-                2 jaja wiejskie
-            </div>
-            <div class="article__p">
-                30 g mąki kokosowej
-            </div>
-            <div class="article__p">
-                łyżeczka erytrytolu
-            </div>
-            <div class="article__p">
-                pół łyżeczki bezglutenowego proszku do pieczenia
-            </div>
-            <div class="article__p">
-                szczypta cynamonu
-            </div>
-            <div class="article__p">
-                mleko migdałowe około 20 ml
-            </div>
-            <div class="article__title">
-                Moje dodatki:
-            </div>
-            <div class="article__p">
-                30 g jogurtu vege kokos
-            </div>
-            <div class="article__p">
-                garść mrożonych wiśni i malin
-            </div>
-            <div class="article__p">
-                szczypta sezamu i wiórek kokosowych
-            </div>
-            <div class="article__p">
-                odrobina tartej gorzkiej czekolady
-            </div>
-            <div class="article__p">
-                sos zero kalorii czekolada-karmel
-            </div>
-            <div class="article__image" data-image-src='{"type":"background","desktopSrc":"photo7a.jpg"}'></div>
-            <div class="article__title">
-                Przygotowanie
-            </div>
-            <div class="article__p">
-                Wbij jajka do miseczki i roztrzep dokładnie. Dodaj do nich erytrytol, mąkę, proszek, cynamon i dokładnie roztrzep.
-                Mąka kokosowa jest dość specyficzna w przygotowaniu ponieważ bardzo chłonie płyny, dlatego masa jest dość gęsta, dodaj wtedy około 20 lub 30 ml mleka migdałowego. Jeśli będzie nadal bardzo gęsta dodaj ciut więcej mleka. Wszystko dokładnie mieszaj trzepaczką.
-                Wlej masę na dobrze rozgrzaną patelnię natłuszczoną wcześniej oliwą. Przykryj przykrywką i smaż na połowie mocy indukcji. Kiedy już spód będzie zwarty, delikatnie przewróc na drugą stronę.
-            </div>
-            <div class="article__p">
-                Na usmażony omlet dodaj swoje ulubione dodatki lub wersje z moimi: jogurt kokosowy, mrożone wiśnie i maliny wcześniej lekko podrzane w mikrofalówce, szczyptę sezamu, wiórek kokosowych, odrobine tartej gorzkiej czekolady. Na koniec u mnie wersja z sosem zero kalorii czekolada-karmel.
-            </div>
-            <div class="article__title">
-                Makro całości to 354 kalorie
-            </div>
-            <div class="article__p">
-                B 22 - W 29 - T 21
-            </div>
-            <div class="article__title">
-                Powyższe makro dotyczy składników użytych w przepisie wraz z dodatkami.
-            </div>
-            <div class="article__p">
-                Jeśli nie masz akurat mąki kokosowej może być to każda inna. Ja również używam ich zamiennie. Są to gryczana, jaglana, ryżowa, kukurydziana, kasztanowa. Tak samo możesz użyć innego mleka czy słodzidła. 
-                Dodatki to już także Twoja inwencja twórcza! Kombinuj i baw się!
+            <div class="recipe__dishInfo">
+                <div class="recipe__dishName">Omlet owocowo-kokosowy</div>
+                <h1 class="recipe__lead">
+                    Mam dla Was pyszną i zdrową propozycję na śniadanie dla miłośników słodkich poranków. Powyższe makro dotyczy wszystkich składników użytych w przepisie.
+                </h1>
+                <div class="recipe__title">Składniki</div>
+                <div class="recipe__ingredients">
+                    <div class="recipe__ingredient">&#9883; 2 jaja wiejskie</div>
+                    <div class="recipe__ingredient">&#9883; 30 g mąki kokosowej</div>
+                    <div class="recipe__ingredient">&#9883; Łyżeczka erytrytolu</div>
+                    <div class="recipe__ingredient">&#9883; Pół łyżeczki bezglutenowego proszku do pieczenia</div>
+                    <div class="recipe__ingredient">&#9883; Szczypta cynamonu</div>
+                    <div class="recipe__ingredient">&#9883; Mleko migdałowe około 20 ml</div>
+                </div>
+                <div class="recipe__title recipe__title--extra">Moje dodatki:</div>
+                <div class="recipe__ingredients">
+                    <div class="recipe__ingredient">&#9883; 30 gram jogurtu vege kokos</div>
+                    <div class="recipe__ingredient">&#9883; Garść mrożonych wiśni i malin</div>
+                    <div class="recipe__ingredient">&#9883; Szzypta sezamu i wiórek kokosowych</div>
+                    <div class="recipe__ingredient">&#9883; Odrobina tartej gorzkiej czekolady</div>
+                    <div class="recipe__ingredient">&#9883; Sos zero kalorii czekolada-karmel</div>
+                </div>
             </div>
         </div>
-        <div class="fb-like" data-href="https://onlygoodvibes.pl/articles/article7.html" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="true"></div>
+        <div class="article__image" data-image-src='{"type":"background","desktopSrc":"photo7a.jpg"}'></div>
+        <div class="recipe__bottom">
+            <div class="recipe__preperTitle">Przygotowanie</div>
+            <div class="recipe__description">
+                Rozbij jajka i roztrzep je dokładnie. Dodaj erytrytol do jajek i wymieszaj trzepaczką. Wsyp mąkę, proszek, cynamon i także dokładnie roztrzep. Mąka kokosowa jest dość specyficzna w przygotowaniu ponieważ bardzo chłonie płyny, dlatego masa jest dość gęsta, dodaj wtedy około 50 lub 70 ml mleka migdałowego. Jeśli będzie nadal bardzo gęsta dodaj ciut więcej. Wszystko dokładnie mieszaj trzepaczką. Wlej masę na dobrze rozgrzaną patelnię, natłuszczoną wcześniej oliwą i przykryj przykrywką. Smaż omlet na połowie mocy kuchenki lub indukcji. Kiedy już spód będzie zwarty, delikatnie przewróc na drugą stronę.
+            </div>
+            <div class="recipe__description">
+                Na gotowy omlet nakładam jogurt kokosowy, mrożone wiśnie i maliny lekko podrzane. Posypuję szczyptą sezamu, wiórek kokosowych, odrobiną tartej gorzkiej czekolady. Na koniec polewam do smaku sosem zero kalorii czekolada-karmel.
+            </div>
+            <div class="recipe__description">
+                Jeśli nie masz akurat mąki kokosowej może być to każda inna. Ja również używam ich zamiennie. Są to gryczana, jaglana, ryżowa, kukurydziana, kasztanowa, wtedy nie będziesz już raczej potrzebować mleka. Tak samo możesz użyć innego mleka czy słodzidła. Dodatki to już także Twoja inwencja twórcza! Kombinuj i baw się!
+            </div>
+            <div class="recipe__description recipe__description--bold">
+                POWYŻSZE makro dotyczy dokładnie składu produktów w przepisie.
+            </div>
+
+            <div class="recipe__description">
+                <a class="article__link2" href="#contact">Koniecznie dajcie znać czy zrobiliście </a> i jak Wam wyszło! Miło mi będzie jeśli zrobicie zdjęcie swoich fit omletów. Smacznego!!!
+            </div>
+            
+        </div>
+        <div class="fb-like" data-href="https://onlygoodvibes.pl/recipes/recipe1.html" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="true"></div>
     </div>
 
     <div class="nextArticles">
-        <div class="nextArticles__mainTitle">Inne pozytywne wibracje</div>
+        <div class="nextArticles__mainTitle">Inne przepisy</div>
         <div class="nextArticles__box">
-            <a href="../articles/articles.html" class="nextArticles__article nextArticles__articles--left showHideElement">
-                <div class="nextArticles__articleArrow">Nastepny wpis</div>
-                <div data-image-src='{"type":"background","desktopSrc":"photo0.jpg"}' alt=""class="nextArticles__articleImage"></div>
-                <div class="nextArticles__articleTitle">Pozytywne wibracje - Wszystkie wpisy</div>
+            <a href="./recipes.html" class="nextArticles__article nextArticles__articles--right showHideElement">
+                <div class="nextArticles__articleArrow">Poprzedni przepis</div>
+                <div data-image-src='{"type":"background","desktopSrc":"recipe.jpg"}' alt=""class="nextArticles__articleImage"></div>
+                <div class="nextArticles__articleTitle">Wszystkie przepisy</div>
             </a>
-            <a href="../articles/article6.html" class="nextArticles__article nextArticles__articles--right showHideElement">
-                <div class="nextArticles__articleArrow">Poprzedni wpis</div>
-                <div data-image-src='{"type":"background","desktopSrc":"photo6.jpg"}' alt=""class="nextArticles__articleImage"></div>
-                <div class="nextArticles__articleTitle">Odporność na przedwiośniu</div>
+            <a href="./recipe2.html" class="nextArticles__article nextArticles__articles--left showHideElement">
+                <div class="nextArticles__articleArrow">Nastepny przepisy</div>
+                <div data-image-src='{"type":"background","desktopSrc":"recipe2.jpg"}' alt=""class="nextArticles__articleImage"></div>
+                <div class="nextArticles__articleTitle">GofroLOVE czyli zdrowe gofry dla wymagających</div>
             </a>
+            
         </div>
     </div>
 
