--- a/recipes/recipe2.html
+++ b/recipes/recipe2.html
@@ -27,16 +27,16 @@
         gtag('config', 'UA-97017090-7');
     </script>
 
-    <meta property="og:url"                content="https://onlygoodvibes.pl/articles/article7.html" />
+    <meta property="og:url"                content="https://onlygoodvibes.pl/recipes/recipe2.html" />
     <meta property="og:type"               content="article" />
-    <meta property="og:title"              content="Omlet kokosowo-owocowy" />
-    <meta property="og:description"        content="Oto moja propozycja zdrowego śniadania..." />
-    <meta property="og:image"              content="https://onlygoodvibes.pl/image/desktop/photo7.jpg" />
+    <meta property="og:title"              content="GofroLOVE czyli zdrowe gofry dla wymagających" />
+    <meta property="og:description"        content="Smakołyk ten polecam zarówno jako ofertę na zdrowe śniadanie a także ciekawą kolację..." />
+    <meta property="og:image"              content="http://onlygoodvibes.pl/image/desktop/recipe2.jpg" />
 
 </head>
-<body>
+<body class="bg--blue recipe__web" >
     <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/pl_PL/sdk.js#xfbml=1&version=v10.0" nonce="6Py48fxF"></script>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/pl_PL/sdk.js#xfbml=1&version=v10.0" nonce="s1FHr098"></script>
 
     <div class="navigation">
         <a href="../index.html" class="logoOGV logoOGV--nav">
@@ -59,93 +59,80 @@
             </div>
         </div>
     </div>
-    <div class="article__hero">
-        <div class="article__heroImg" data-image-src='{"type":"background","desktopSrc":"photo7.jpg"}'></div>
-    </div>
-    <div class="article">
-        <div class="article__mainTitle showHideElement">Omlet <br> kokosowo-owocowy</div>
-        <div class="article__content showHideElement">
-            <div class="article__title">
-                Składniki:
+    <div class="recipe">
+        <div class="recipe__top">
+            <div class="recipe__imageBox">
+                <img src="../image/desktop/recipe2.jpg" alt="Zdjecie naleśnika" class="recipe__image">
+                <div class="recipe__info">
+                    <div class="recipe__kcal">339 kcal</div>
+                    <div class="recipe__macro">
+                        <div class="recipe__macroIngredient recipe__macroIngredient--protein">B 31</div>
+                        <div class="recipe__macroIngredient recipe__macroIngredient---carbohydrates">W 3.4</div>
+                        <div class="recipe__macroIngredient recipe__macroIngredient---fats">T 21</div>
+                    </div>
+                </div>
             </div>
-            <div class="article__p">
-                2 jaja wiejskie
-            </div>
-            <div class="article__p">
-                30 g mąki kokosowej
-            </div>
-            <div class="article__p">
-                łyżeczka erytrytolu
-            </div>
-            <div class="article__p">
-                pół łyżeczki bezglutenowego proszku do pieczenia
-            </div>
-            <div class="article__p">
-                szczypta cynamonu
-            </div>
-            <div class="article__p">
-                mleko migdałowe około 20 ml
-            </div>
-            <div class="article__title">
-                Moje dodatki:
-            </div>
-            <div class="article__p">
-                30 g jogurtu vege kokos
-            </div>
-            <div class="article__p">
-                garść mrożonych wiśni i malin
-            </div>
-            <div class="article__p">
-                szczypta sezamu i wiórek kokosowych
-            </div>
-            <div class="article__p">
-                odrobina tartej gorzkiej czekolady
-            </div>
-            <div class="article__p">
-                sos zero kalorii czekolada-karmel
-            </div>
-            <div class="article__image" data-image-src='{"type":"background","desktopSrc":"photo7a.jpg"}'></div>
-            <div class="article__title">
-                Przygotowanie
-            </div>
-            <div class="article__p">
-                Wbij jajka do miseczki i roztrzep dokładnie. Dodaj do nich erytrytol, mąkę, proszek, cynamon i dokładnie roztrzep.
-                Mąka kokosowa jest dość specyficzna w przygotowaniu ponieważ bardzo chłonie płyny, dlatego masa jest dość gęsta, dodaj wtedy około 20 lub 30 ml mleka migdałowego. Jeśli będzie nadal bardzo gęsta dodaj ciut więcej mleka. Wszystko dokładnie mieszaj trzepaczką.
-                Wlej masę na dobrze rozgrzaną patelnię natłuszczoną wcześniej oliwą. Przykryj przykrywką i smaż na połowie mocy indukcji. Kiedy już spód będzie zwarty, delikatnie przewróc na drugą stronę.
-            </div>
-            <div class="article__p">
-                Na usmażony omlet dodaj swoje ulubione dodatki lub wersje z moimi: jogurt kokosowy, mrożone wiśnie i maliny wcześniej lekko podrzane w mikrofalówce, szczyptę sezamu, wiórek kokosowych, odrobine tartej gorzkiej czekolady. Na koniec u mnie wersja z sosem zero kalorii czekolada-karmel.
-            </div>
-            <div class="article__title">
-                Makro całości to 354 kalorie
-            </div>
-            <div class="article__p">
-                B 22 - W 29 - T 21
-            </div>
-            <div class="article__title">
-                Powyższe makro dotyczy składników użytych w przepisie wraz z dodatkami.
-            </div>
-            <div class="article__p">
-                Jeśli nie masz akurat mąki kokosowej może być to każda inna. Ja również używam ich zamiennie. Są to gryczana, jaglana, ryżowa, kukurydziana, kasztanowa. Tak samo możesz użyć innego mleka czy słodzidła. 
-                Dodatki to już także Twoja inwencja twórcza! Kombinuj i baw się!
+            <div class="recipe__dishInfo">
+                <div class="recipe__dishName">GofroLOVE czyli zdrowe gofry dla wymagających</div>
+                <h1 class="recipe__lead">
+                    Smakołyk ten polecam zarówno jako ofertę na zdrowe śniadanie a także ciekawą kolację dla wszystkich miłośników słodkich dań. Chociaż w tytule napisałam „dla wymagających” są banalnie proste w wykonaniu, a przez to określenie miałam na myśli fit maniaków, oraz osoby na diecie bezglutenowej, bezlaktozowej i bezcukrowej.
+                </h1>
+                <div class="recipe__lead">
+                    Jeśli chodzi o makro całego dania (bez moich dodatków): <br> 339 kalorii B 31 W 3.4 T 21 <br>
+                    Jak widać baza jest typowo białkowo-tłuszczowa, z dodatkami makro przedstawia się tak: <br> 421 kalorii B 32 W 21 T 24 - w tym wypadku mamy pełnowartościowy posiłek
+                </div>
+                <div class="recipe__title">Składniki</div>
+                <div class="recipe__ingredients">
+                    <div class="recipe__ingredient">&#9883; 2 jaja wiejskie</div>
+                    <div class="recipe__ingredient">&#9883; 20 g mąki  migdałowej</div>
+                    <div class="recipe__ingredient">&#9883; 15 g odżywki białkowej Iso Whey Zero kokos (możesz pominąć i zamiast niej dodać łyżkę mąki)</div>
+                    <div class="recipe__ingredient">&#9883; 1 duża łyżka ertyrytolu</div>
+                    <div class="recipe__ingredient">&#9883; 1 płaska łyżeczka proszku do pieczenia bezglutenowego</div>
+                    <div class="recipe__ingredient">&#9883; Oliwa do spryskania gofrownicy tylko przed pierwszą porcją ciasta.</div>
+                </div>
+                <div class="recipe__title recipe__title--extra">Moje dodatki:</div>
+                <div class="recipe__ingredients">
+                    <div class="recipe__ingredient">&#9883; Jogurt kokosowy vege</div>
+                    <div class="recipe__ingredient">&#9883; Frużelina wiśniowa</div>
+                    <div class="recipe__ingredient">&#9883; Maliny mrożone </div>
+                    <div class="recipe__ingredient">&#9883; Kakako</div>
+                    <div class="recipe__ingredient">&#9883; Cynamom</div>
+                </div>
             </div>
         </div>
-        <div class="fb-like" data-href="https://onlygoodvibes.pl/articles/article7.html" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="true"></div>
+        <div class="article__image" data-image-src='{"type":"background","desktopSrc":"recipe2a.jpg"}'></div>
+        <div class="recipe__bottom">
+            <div class="recipe__preperTitle">Przygotowanie</div>
+            <div class="recipe__description">
+                Jaja, mąkę, odżywkę, erytrytol, proszek bg wrzucasz do miski i miksujesz na wysokich obrotach aż masa będzie gładka. 
+            </div>
+            <div class="recipe__description">
+                W międzyczasie rozgrzej gofrownicę i spryskaj ją oliwą z oliwek lub olejem kokosowym, bardzo ważne aby była rozgrzana przed nałożeniem ciasta. Nakładaj masę, ale nie przesadź z jej ilością, szkoda dobrego materiału na wylewanie bokami.
+            </div>
+            <div class="recipe__description">
+                Z tej porcji zawsze wychodzi mi 5 sztuk. Teraz możesz ponieść się swojej smakowej fantazji i na gotowe gofry nałożyć co tylko chcesz. U mnie tradycyjnie jest to jogurt wegański, do którego dodałam cynamon, kakao i szczyptę erytrytolu, na wierzch nałożyłam mrożone, lekko podgrzane maliny oraz frużelinę wiśniową. 
+            </div>
+            <div class="recipe__description">
+                <a class="article__link2" href="#contact">Koniecznie dajcie znać czy zrobiliście </a> i jak Wam wyszło! Miło mi będzie jeśli zrobicie zdjęcie swoich fit gofrów. Smacznego!!!
+            </div>
+        </div>
+        <div class="fb-like" data-href="https://onlygoodvibes.pl/recipes/recipe2.html" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="true"></div>
     </div>
 
     <div class="nextArticles">
-        <div class="nextArticles__mainTitle">Inne pozytywne wibracje</div>
+        <div class="nextArticles__mainTitle">Inne przepisy</div>
         <div class="nextArticles__box">
-            <a href="../articles/articles.html" class="nextArticles__article nextArticles__articles--left showHideElement">
-                <div class="nextArticles__articleArrow">Nastepny wpis</div>
-                <div data-image-src='{"type":"background","desktopSrc":"photo0.jpg"}' alt=""class="nextArticles__articleImage"></div>
-                <div class="nextArticles__articleTitle">Pozytywne wibracje - Wszystkie wpisy</div>
+            <a href="./recipe1.html" class="nextArticles__article nextArticles__articles--right showHideElement">
+                <div class="nextArticles__articleArrow">Poprzedni przepis</div>
+                <div data-image-src='{"type":"background","desktopSrc":"photo7.jpg"}' alt=""class="nextArticles__articleImage"></div>
+                <div class="nextArticles__articleTitle">Omlet owocowo-kokosowy</div>
             </a>
-            <a href="../articles/article6.html" class="nextArticles__article nextArticles__articles--right showHideElement">
-                <div class="nextArticles__articleArrow">Poprzedni wpis</div>
-                <div data-image-src='{"type":"background","desktopSrc":"photo6.jpg"}' alt=""class="nextArticles__articleImage"></div>
-                <div class="nextArticles__articleTitle">Odporność na przedwiośniu</div>
+            <a href="./recipe3.html" class="nextArticles__article nextArticles__articles--left showHideElement">
+                <div class="nextArticles__articleArrow">Nastepny przepis</div>
+                <div data-image-src='{"type":"background","desktopSrc":"recipe3.jpg"}' alt=""class="nextArticles__articleImage"></div>
+                <div class="nextArticles__articleTitle">Fit batony owsiano-daktyLOVE</div>
             </a>
+            
         </div>
     </div>
 
