--- a/recipes/recipe3.html
+++ b/recipes/recipe3.html
@@ -27,16 +27,16 @@
         gtag('config', 'UA-97017090-7');
     </script>
 
-    <meta property="og:url"                content="https://onlygoodvibes.pl/articles/article7.html" />
+    <meta property="og:url"                content="https://onlygoodvibes.pl/recipes/recipe3.html" />
     <meta property="og:type"               content="article" />
-    <meta property="og:title"              content="Omlet kokosowo-owocowy" />
-    <meta property="og:description"        content="Oto moja propozycja zdrowego śniadania..." />
-    <meta property="og:image"              content="https://onlygoodvibes.pl/image/desktop/photo7.jpg" />
+    <meta property="og:title"              content="Fit batony owsiano-daktyLOVE" />
+    <meta property="og:description"        content="Czytaj, rób i zajadaj na zdrowie! Z tej porcji wyszło mi 7 batoników 1 batonik 180 kalorii B 3 W 27 T 8." />
+    <meta property="og:image"              content="http://onlygoodvibes.pl/image/desktop/recipe3.jpg" />
 
 </head>
-<body>
+<body class="recipe__web">
     <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/pl_PL/sdk.js#xfbml=1&version=v10.0" nonce="6Py48fxF"></script>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/pl_PL/sdk.js#xfbml=1&version=v10.0" nonce="rHthhGtI"></script>
 
     <div class="navigation">
         <a href="../index.html" class="logoOGV logoOGV--nav">
@@ -59,93 +59,79 @@
             </div>
         </div>
     </div>
-    <div class="article__hero">
-        <div class="article__heroImg" data-image-src='{"type":"background","desktopSrc":"photo7.jpg"}'></div>
-    </div>
-    <div class="article">
-        <div class="article__mainTitle showHideElement">Omlet <br> kokosowo-owocowy</div>
-        <div class="article__content showHideElement">
-            <div class="article__title">
-                Składniki:
+    <div class="recipe">
+        <div class="recipe__top">
+            <div class="recipe__imageBox">
+                <img src="../image/desktop/recipe3.jpg" alt="Zdjecie naleśnika" class="recipe__image">
+                <div class="recipe__info">
+                    <div class="recipe__kcal">180 kcal</div>
+                    <div class="recipe__macro">
+                        <div class="recipe__macroIngredient recipe__macroIngredient--protein">B 3</div>
+                        <div class="recipe__macroIngredient recipe__macroIngredient---carbohydrates">W 27</div>
+                        <div class="recipe__macroIngredient recipe__macroIngredient---fats">T 8</div>
+                    </div>
+                </div>
             </div>
-            <div class="article__p">
-                2 jaja wiejskie
-            </div>
-            <div class="article__p">
-                30 g mąki kokosowej
-            </div>
-            <div class="article__p">
-                łyżeczka erytrytolu
-            </div>
-            <div class="article__p">
-                pół łyżeczki bezglutenowego proszku do pieczenia
-            </div>
-            <div class="article__p">
-                szczypta cynamonu
-            </div>
-            <div class="article__p">
-                mleko migdałowe około 20 ml
-            </div>
-            <div class="article__title">
-                Moje dodatki:
-            </div>
-            <div class="article__p">
-                30 g jogurtu vege kokos
-            </div>
-            <div class="article__p">
-                garść mrożonych wiśni i malin
-            </div>
-            <div class="article__p">
-                szczypta sezamu i wiórek kokosowych
-            </div>
-            <div class="article__p">
-                odrobina tartej gorzkiej czekolady
-            </div>
-            <div class="article__p">
-                sos zero kalorii czekolada-karmel
-            </div>
-            <div class="article__image" data-image-src='{"type":"background","desktopSrc":"photo7a.jpg"}'></div>
-            <div class="article__title">
-                Przygotowanie
-            </div>
-            <div class="article__p">
-                Wbij jajka do miseczki i roztrzep dokładnie. Dodaj do nich erytrytol, mąkę, proszek, cynamon i dokładnie roztrzep.
-                Mąka kokosowa jest dość specyficzna w przygotowaniu ponieważ bardzo chłonie płyny, dlatego masa jest dość gęsta, dodaj wtedy około 20 lub 30 ml mleka migdałowego. Jeśli będzie nadal bardzo gęsta dodaj ciut więcej mleka. Wszystko dokładnie mieszaj trzepaczką.
-                Wlej masę na dobrze rozgrzaną patelnię natłuszczoną wcześniej oliwą. Przykryj przykrywką i smaż na połowie mocy indukcji. Kiedy już spód będzie zwarty, delikatnie przewróc na drugą stronę.
-            </div>
-            <div class="article__p">
-                Na usmażony omlet dodaj swoje ulubione dodatki lub wersje z moimi: jogurt kokosowy, mrożone wiśnie i maliny wcześniej lekko podrzane w mikrofalówce, szczyptę sezamu, wiórek kokosowych, odrobine tartej gorzkiej czekolady. Na koniec u mnie wersja z sosem zero kalorii czekolada-karmel.
-            </div>
-            <div class="article__title">
-                Makro całości to 354 kalorie
-            </div>
-            <div class="article__p">
-                B 22 - W 29 - T 21
-            </div>
-            <div class="article__title">
-                Powyższe makro dotyczy składników użytych w przepisie wraz z dodatkami.
-            </div>
-            <div class="article__p">
-                Jeśli nie masz akurat mąki kokosowej może być to każda inna. Ja również używam ich zamiennie. Są to gryczana, jaglana, ryżowa, kukurydziana, kasztanowa. Tak samo możesz użyć innego mleka czy słodzidła. 
-                Dodatki to już także Twoja inwencja twórcza! Kombinuj i baw się!
+            <div class="recipe__dishInfo">
+                <div class="recipe__dishName">Fit batony owsiano-daktyLOVE</div>
+                <h1 class="recipe__lead">
+                    Czy znasz to uczucie gdy jesteś tuż na finiszu zakupów, dumny jak paw, że tym razem udało Ci się wygrać z pokusami i nie ugiąłeś się przed słodkościami, które wołały do Ciebie z półek „ Weź mnie!”, jednak Twą dumę przerwał  widok pięknych kolorowych batoników tuż przy samej kasie, które niczym wzrok kota ze Shreka zerkały na Ciebie i wysyłały niewidzialne sieci?! Tym razem masz możliwość spróbowania czegoś innego, swojego i totalnie zdrowego! Czytaj, rób i zajadaj na zdrowie! <br> Z tej porcji wyszło mi 7 batoników gdzie 1 batonik ma 180 kalorii w tym: B 3 W 27 T 8
+                </h1>
+                <div class="recipe__title">Składniki</div>
+                <div class="recipe__ingredients">
+                    <div class="recipe__ingredient">&#9883; 100 g płatków owsianych</div>
+                    <div class="recipe__ingredient">&#9883; 150 g daktyli bez pestek</div>
+                    <div class="recipe__ingredient">&#9883; 20 g oleju kokosowego</div>
+                    <div class="recipe__ingredient">&#9883; 15 g masła orzechowego</div>
+                    <div class="recipe__ingredient">&#9883; 2 łyżki erytrytolu</div>
+                </div>
+                <div class="recipe__title recipe__title--extra">Polewa czekoladowa</div>
+                <div class="recipe__ingredients">
+                    <div class="recipe__ingredient">&#9883; Duża łyżka oleju kokosowego</div>
+                    <div class="recipe__ingredient">&#9883; Łyżeczka kakao</div>
+                    <div class="recipe__ingredient">Jeśli nie lubisz czekolady na bazie oleju kokosowego możesz użyć zwykłej gorzkiej i ją rozpuścić, ale wtedy pamiętaj, że ilość kalorii, które podaje ulegnie zmianie</div>
+                </div>
             </div>
         </div>
-        <div class="fb-like" data-href="https://onlygoodvibes.pl/articles/article7.html" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="true"></div>
+        <div class="article__image" data-image-src='{"type":"background","desktopSrc":"recipe3a.jpg"}'></div>
+        <div class="recipe__bottom">
+            <div class="recipe__preperTitle">Przygotowanie</div>
+            <div class="recipe__description">
+                Daktyle wsyp do miseczki, zalej wrzątkiem i odczekaj 20 minut.
+            </div>
+            <div class="recipe__description">
+                Płatki owsiane upraż na suchej patelni, mieszając od czasu do czasu, aby się nie przypaliły. Mają być lekko zarumienione.
+            </div>
+            <div class="recipe__description">
+                Po uprażeniu wsyp do naczynia, dodaj olej kokosowy i około 4 łyżek wody z moczonych daktyli.  Całość dokładnie zblenduj. Masa powinna być klejąca, jeśli będzie Ci się ciężko blendować dodaj jeszcze daktylowej wody.
+            </div>
+            <div class="recipe__description">
+                Nasteponie przełóż całą masę do pojemnika wyłożonego papierem do pieczenia(u mnie 20x12 cm) uklep i włóż na chwile do zamrażalnika. W tym czasie wylej resztę wody z daktyli, dodaj masło orzechowe i zblenduj.  Masę wyłóż na owsiano-kokosowy spód i wstaw do lodówki.
+            </div>
+            <div class="recipe__description recipe__description--bold">
+                Polewa jest bardzo prosta, podgrzej w małym naczyniu olej kokosowy aby miał płynną konsystencję, dodaj łyżeczkę kakao i bardzo dokładnie wymieszaj aby nie było grudek.  Polewą polej naszą bazę i wstaw do lodówki. Gdy całość będzie już twarda, możesz pokroić ją na paski jak batony. Jeśli nie możesz wytrzymać możesz je zjeść po godzinie aż trochę stwardnieją,  jednak bezapelacyjnie najlepiej smakują następnego dnia.
+            </div>
+            <div class="recipe__description">
+                <a class="article__link2" href="#contact">Koniecznie dajcie znać czy zrobiliście </a> i jak Wam wyszło! Miło mi będzie jeśli zrobicie zdjęcie swoich fit batonów. Smacznego!!!
+            </div>
+        </div>
+        <div class="fb-like" data-href="https://onlygoodvibes.pl/recipes/recipe3.html" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="true"></div>
     </div>
 
     <div class="nextArticles">
-        <div class="nextArticles__mainTitle">Inne pozytywne wibracje</div>
+        <div class="nextArticles__mainTitle">Inne przepisy</div>
         <div class="nextArticles__box">
-            <a href="../articles/articles.html" class="nextArticles__article nextArticles__articles--left showHideElement">
-                <div class="nextArticles__articleArrow">Nastepny wpis</div>
-                <div data-image-src='{"type":"background","desktopSrc":"photo0.jpg"}' alt=""class="nextArticles__articleImage"></div>
-                <div class="nextArticles__articleTitle">Pozytywne wibracje - Wszystkie wpisy</div>
+            <a href="./recipe2.html" class="nextArticles__article nextArticles__articles--right showHideElement">
+                <div class="nextArticles__articleArrow">Poprzedni przepis</div>
+                <div data-image-src='{"type":"background","desktopSrc":"recipe2.jpg"}' alt=""class="nextArticles__articleImage"></div>
+                <div class="nextArticles__articleTitle">GofroLOVE czyli zdrowe gofry dla wymagających</div>
             </a>
-            <a href="../articles/article6.html" class="nextArticles__article nextArticles__articles--right showHideElement">
-                <div class="nextArticles__articleArrow">Poprzedni wpis</div>
-                <div data-image-src='{"type":"background","desktopSrc":"photo6.jpg"}' alt=""class="nextArticles__articleImage"></div>
-                <div class="nextArticles__articleTitle">Odporność na przedwiośniu</div>
+            <a href="./recipes.html" class="nextArticles__article nextArticles__articles--left showHideElement">
+                <div class="nextArticles__articleArrow">Nastepny przepis</div>
+                <div data-image-src='{"type":"background","desktopSrc":"recipe.jpg"}' alt=""class="nextArticles__articleImage"></div>
+                <div class="nextArticles__articleTitle">Wszystkie przepisy</div>
             </a>
+            
         </div>
     </div>
 
