--- a/recipes/recipes.html
+++ b/recipes/recipes.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,7 +16,6 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:wght@400;600&display=swap" rel="stylesheet">
 
-
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-97017090-7"></script>
     <script>
@@ -27,17 +26,8 @@
         gtag('config', 'UA-97017090-7');
     </script>
 
-    <meta property="og:url"                content="https://onlygoodvibes.pl/articles/article7.html" />
-    <meta property="og:type"               content="article" />
-    <meta property="og:title"              content="Omlet kokosowo-owocowy" />
-    <meta property="og:description"        content="Oto moja propozycja zdrowego śniadania..." />
-    <meta property="og:image"              content="https://onlygoodvibes.pl/image/desktop/photo7.jpg" />
-
 </head>
 <body>
-    <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/pl_PL/sdk.js#xfbml=1&version=v10.0" nonce="6Py48fxF"></script>
-
     <div class="navigation">
         <a href="../index.html" class="logoOGV logoOGV--nav">
             <div class="logoOGV__box">
@@ -60,97 +50,48 @@
         </div>
     </div>
     <div class="article__hero">
-        <div class="article__heroImg" data-image-src='{"type":"background","desktopSrc":"photo7.jpg"}'></div>
+        <div class="article__heroImg article__heroImg--position" data-image-src='{"type":"background","desktopSrc":"recipe.jpg"}'></div>
     </div>
-    <div class="article">
-        <div class="article__mainTitle showHideElement">Omlet <br> kokosowo-owocowy</div>
-        <div class="article__content showHideElement">
-            <div class="article__title">
-                Składniki:
-            </div>
-            <div class="article__p">
-                2 jaja wiejskie
-            </div>
-            <div class="article__p">
-                30 g mąki kokosowej
-            </div>
-            <div class="article__p">
-                łyżeczka erytrytolu
-            </div>
-            <div class="article__p">
-                pół łyżeczki bezglutenowego proszku do pieczenia
-            </div>
-            <div class="article__p">
-                szczypta cynamonu
-            </div>
-            <div class="article__p">
-                mleko migdałowe około 20 ml
-            </div>
-            <div class="article__title">
-                Moje dodatki:
-            </div>
-            <div class="article__p">
-                30 g jogurtu vege kokos
-            </div>
-            <div class="article__p">
-                garść mrożonych wiśni i malin
-            </div>
-            <div class="article__p">
-                szczypta sezamu i wiórek kokosowych
-            </div>
-            <div class="article__p">
-                odrobina tartej gorzkiej czekolady
-            </div>
-            <div class="article__p">
-                sos zero kalorii czekolada-karmel
-            </div>
-            <div class="article__image" data-image-src='{"type":"background","desktopSrc":"photo7a.jpg"}'></div>
-            <div class="article__title">
-                Przygotowanie
-            </div>
-            <div class="article__p">
-                Wbij jajka do miseczki i roztrzep dokładnie. Dodaj do nich erytrytol, mąkę, proszek, cynamon i dokładnie roztrzep.
-                Mąka kokosowa jest dość specyficzna w przygotowaniu ponieważ bardzo chłonie płyny, dlatego masa jest dość gęsta, dodaj wtedy około 20 lub 30 ml mleka migdałowego. Jeśli będzie nadal bardzo gęsta dodaj ciut więcej mleka. Wszystko dokładnie mieszaj trzepaczką.
-                Wlej masę na dobrze rozgrzaną patelnię natłuszczoną wcześniej oliwą. Przykryj przykrywką i smaż na połowie mocy indukcji. Kiedy już spód będzie zwarty, delikatnie przewróc na drugą stronę.
-            </div>
-            <div class="article__p">
-                Na usmażony omlet dodaj swoje ulubione dodatki lub wersje z moimi: jogurt kokosowy, mrożone wiśnie i maliny wcześniej lekko podrzane w mikrofalówce, szczyptę sezamu, wiórek kokosowych, odrobine tartej gorzkiej czekolady. Na koniec u mnie wersja z sosem zero kalorii czekolada-karmel.
-            </div>
-            <div class="article__title">
-                Makro całości to 354 kalorie
-            </div>
-            <div class="article__p">
-                B 22 - W 29 - T 21
-            </div>
-            <div class="article__title">
-                Powyższe makro dotyczy składników użytych w przepisie wraz z dodatkami.
-            </div>
-            <div class="article__p">
-                Jeśli nie masz akurat mąki kokosowej może być to każda inna. Ja również używam ich zamiennie. Są to gryczana, jaglana, ryżowa, kukurydziana, kasztanowa. Tak samo możesz użyć innego mleka czy słodzidła. 
-                Dodatki to już także Twoja inwencja twórcza! Kombinuj i baw się!
-            </div>
-        </div>
-        <div class="fb-like" data-href="https://onlygoodvibes.pl/articles/article7.html" data-width="" data-layout="button_count" data-action="like" data-size="small" data-share="true"></div>
-    </div>
+    <div class="articlesBox" id="articles">
 
-    <div class="nextArticles">
-        <div class="nextArticles__mainTitle">Inne pozytywne wibracje</div>
-        <div class="nextArticles__box">
-            <a href="../articles/articles.html" class="nextArticles__article nextArticles__articles--left showHideElement">
-                <div class="nextArticles__articleArrow">Nastepny wpis</div>
-                <div data-image-src='{"type":"background","desktopSrc":"photo0.jpg"}' alt=""class="nextArticles__articleImage"></div>
-                <div class="nextArticles__articleTitle">Pozytywne wibracje - Wszystkie wpisy</div>
-            </a>
-            <a href="../articles/article6.html" class="nextArticles__article nextArticles__articles--right showHideElement">
-                <div class="nextArticles__articleArrow">Poprzedni wpis</div>
-                <div data-image-src='{"type":"background","desktopSrc":"photo6.jpg"}' alt=""class="nextArticles__articleImage"></div>
-                <div class="nextArticles__articleTitle">Odporność na przedwiośniu</div>
-            </a>
-        </div>
-    </div>
+        <h1 class="articlesBox__mainTitle">Przepisy</h1>
+        <a class="articlesBox__article showHideElement articlesBox__article--right" href="./recipe3.html">
+            <div class="articlesBox__articleContent">
+                <div class="articlesBox__articleTop">Przepisy</div>
+                <div class="articlesBox__articleTitle">Fit batony owsiano-daktyLOVE</div>
+                <div class="articlesBox__articleText">
+                    Czy znasz to uczucie gdy jesteś tuż na finiszu zakupów, dumny jak paw, że tym razem udało Ci się wygrać z pokusami i nie ugiąłeś się przed słodkościami...
+                </div>
+            </div>
+            <div class="articlesBox__articleImage" data-image-src='{"type":"background","desktopSrc":"recipe3.jpg","size":"small"}'></div>
+        </a>
 
+        <a class="articlesBox__article showHideElement" href="./recipe2.html">
+            <div class="articlesBox__articleContent">
+                <div class="articlesBox__articleTop">Przepisy</div>
+                <div class="articlesBox__articleTitle">GofroLOVE czyli zdrowe gofry dla wymagających</div>
+                <div class="articlesBox__articleText">
+                    Smakołyk ten polecam zarówno jako ofertę na zdrowe śniadanie a także ciekawą kolację dla wszystkich miłośników słodkich dań...
+                </div>
+            </div>
+            <div class="articlesBox__articleImage" data-image-src='{"type":"background","desktopSrc":"recipe2.jpg","size":"small"}'></div>
+        </a>
+
+        <a class="articlesBox__article showHideElement articlesBox__article--right" href="./recipe1.html">
+            <div class="articlesBox__articleContent">
+                <div class="articlesBox__articleTop">Przepisy</div>
+                <div class="articlesBox__articleTitle">Omlet <br> kokosowo-owocowy</div>
+                <div class="articlesBox__articleText">
+                    To co znajdziesz w dzisiejszym artykule, to zalecenia dietetyczne ze wskazaniem dla osób, które tak jak ja borykają się z niedoczynnością tarczycy i Hashimoto ...
+                </div>
+            </div>
+            <div class="articlesBox__articleImage" data-image-src='{"type":"background","desktopSrc":"photo7.jpg","size":"small"}'></div>
+        </a>
+
+    </div>
     <div class="footer showHideElement" id="contact">
         <div class="footer__box footer__box--contact">
+            <!-- <div class="footer__link">Kontakt</div> -->
             <div class="footer__link">only.good.vibes@wp.pl</div>
         </div>
         <div class="footer__box footer__box--icon">
@@ -175,7 +116,7 @@
             </a>
         </div>
         <div class="footer__box footer__box--webRights">
-            Only Good Vibes <span class="currentYear">2020</span> © Designed By <div class="footer__author">Luki</div>
+            Only Good Vibes <span class="currentYear">2020 </span> © Designed By <div class="footer__author">Luki</div>
         </div>
     </div>
 </body>
