Add new article.

--- a/index.html
+++ b/index.html
@@ -72,6 +72,17 @@
     <div class="articlesBox" id="articles">
         <h1 class="articlesBox__mainTitle">Pozytywne wibracje</h1>
 
+        <a class="articlesBox__article showHideElement articlesBox__article--right" href="./articles/article12.html">
+            <div class="articlesBox__articleContent">
+                <div class="articlesBox__articleTop">Dieta</div>
+                <div class="articlesBox__articleTitle">Czego w mojej kuchni nigdy nie zabraknie! Część 1</div>
+                <div class="articlesBox__articleText">
+                    Chciałabym Wam opowiedzieć co zawsze mam, kupuję na zapas i bez czego nie wyobrażam sobie mojego zdrowego stylu życia w kwestii odżywiania...
+                </div>
+            </div>
+            <div class="articlesBox__articleImage" data-image-src='{"type":"background","desktopSrc":"photo12.jpg","size":"small"}'></div>
+        </a>
+
         <a class="articlesBox__article showHideElement" href="./articles/article11.html">
             <div class="articlesBox__articleContent">
                 <div class="articlesBox__articleTop">Emocje</div>
