Add new article.

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             </div>
         </div>
     </div>
-    <div class="heroBox heroBox--position" data-image-src='{"type":"background","desktopSrc":"photo0.jpg"}'>
+    <div class="heroBox heroBox--position" data-image-src='{"type":"background","desktopSrc":"photo0c.jpg"}'>
             <div class="heroBox__word showHideElement">Only</div>
             <div class="heroBox__word showHideElement">Good</div>
             <div class="heroBox__word showHideElement">Vibes</div>
@@ -71,6 +71,17 @@
     </div>
     <div class="articlesBox" id="articles">
         <h1 class="articlesBox__mainTitle">Pozytywne wibracje</h1>
+
+        <a class="articlesBox__article showHideElement" href="./articles/article13.html">
+            <div class="articlesBox__articleContent">
+                <div class="articlesBox__articleTop">Emocje</div>
+                <div class="articlesBox__articleTitle">Krótka historia z morałem</div>
+                <div class="articlesBox__articleText">
+                    Możesz uwierzyć lub nie, ale dość długo siedziałam przed otwartym monitorem laptopa, z czystą białą kartką, którą nie wiedziałam w jaki sposób zapełnić znaczącym potokiem słów…
+                </div>
+            </div>
+            <div class="articlesBox__articleImage" data-image-src='{"type":"background","desktopSrc":"photo13a.jpg","size":"small"}'></div>
+        </a>
 
         <a class="articlesBox__article showHideElement articlesBox__article--right" href="./articles/article12.html">
             <div class="articlesBox__articleContent">
