--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <title>Only Good Vibes</title>
-    <link rel="stylesheet" href="./css/main.min.css?v4" />
+    <link rel="stylesheet" href="./css/main.min.css" />
     <script defer src="./js/main.min.js?v4"></script>
 
     <link rel="icon" type="image/jpg" href="./image/flavIcon.jpg" />
